1.1.7
----------------
- protect against starting PingStrategy being called more than once (Issue #694, https://github.com/aheckmann)
- make PingStrategy interval configurable (was 1 second, relaxed to 5) (Issue #693, https://github.com/aheckmann)
- made PingStrategy api more consistant, callback to start/stop methods are optional (Issue #693, https://github.com/aheckmann)

1.1.6 2012-09-01
----------------
- Fix for readPreference NEAREST for replicasets (Issue #693, https://github.com/aheckmann)
- Emit end correctly on stream cursor (Issue #692, https://github.com/Raynos)

1.1.5 2012-08-29
----------------
- Fix for eval on replicaset Issue #684
- Use helpful error msg when native parser not compiled (Issue #685, https://github.com/aheckmann)
- Arbiter connect hotfix (Issue #681, https://github.com/fengmk2)
- Upgraded bson parser to 0.1.2 using gyp, deprecated support for node 0.4.X
- Added name parameter to createIndex/ensureIndex to be able to override index names larger than 128 bytes
- Added exhaust option for find for feature completion (not recommended for normal use)
- Added tailableRetryInterval to find for tailable cursors to allow to control getMore retry time interval
- Fixes for read preferences when using MongoS to correctly handle no read preference set when iterating over a cursor (Issue #686)

1.1.4 2012-08-12
----------------
- Added Mongos connection type with a fallback list for mongos proxies, supports ha (on by default) and will attempt to reconnect to failed proxies.
- Documents can now have a toBSON method that lets the user control the serialization behavior for documents being saved.
- Gridstore instance object now works as a readstream or writestream (thanks to code from Aaron heckmann (https://github.com/aheckmann/gridfs-stream)).
- Fix gridfs readstream (Issue #607, https://github.com/tedeh).
- Added disableDriverBSONSizeCheck property to Server.js for people who wish to push the inserts to the limit (Issue #609).