@@ -11,10 +11,7 @@ StatisticsStrategy.prototype.start = function(callback) {
 }
 
 StatisticsStrategy.prototype.stop = function(callback) {
-  // Remove reference to replicaset
-  this.replicaset = null;
-  // Perform callback
-  callback(null, null);
+  callback && callback(null, null);
 }
 
 StatisticsStrategy.prototype.checkoutSecondary = function(tags, secondaryCandidates) {
